--- a/style.css
+++ b/style.css
@@ -1,17 +1,47 @@
-* {
+*,
+*:before,
+*:after {
   box-sizing: border-box;
   background-color: black;
   color: white;
 }
 
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-}
-
 html {
   font-family: "Roboto", sans-serif;
+  font-size: 20px;
+}
+html {
+  --text-color: white;
+  --theme-color: black;
+}
+
+main {
+  color: var(--text-color);
+  background-color: var(--theme-color);
+}
+
+.light-theme {
+  --text-color: black;
+  --theme-color: white;
+}
+
+@media screen and (min-width: 768px) {
+  html {
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  html {
+    font-size: 20px;
+  }
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Cinzel", serif;
+  color: blueviolet;
 }
 
 body {
@@ -23,22 +53,20 @@ body {
   color: black;
 }
 
-h1,
-h2,
-h3 {
-  font-family: "Cinzel", serif;
-  color: blueviolet;
-}
 .header {
-  padding: 60px 170px;
-  padding-top: 80px;
+  padding: 3rem 8.5rem;
+  padding-top: 0;
   text-align: center;
   position: relative;
+  background-image: linear-gradient(90deg, black, white);
 }
 
 .main {
-  max-width: 800px;
+  max-width: 60ch;
   margin: 0 auto;
+}
+
+.navigation {
 }
 
 .nav-link {
@@ -59,10 +87,17 @@ h3 {
 [src] {
   margin: 10px 10px;
   max-height: 199px;
+  margin-top: 40px;
 }
 
 .main > * + * {
   margin-top: 48px;
+}
+
+@media screen and (min-width: 768px) {
+  .main > * + * {
+    margin-top: 5rem;
+  }
 }
 
 .main > * {
@@ -78,25 +113,53 @@ h3 {
   content: "👨‍💻";
 }
 
-.experience-heading {
-  display: inline-block;
+.experience-header {
+  display: flex;
+  flex-direction: column;
 }
 
-.experience-subheading {
-  display: inline-block;
-}
+@media screen and (min-width: 768px) {
+  .experience-header {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    justify-content: space-between;
+  }
 
-.hire-me {
-  position: absolute;
-  right: 50px;
-  top: 20px;
-  padding: 20px;
-  border-radius: 10px;
-  background: plum;
-  color: yellow;
-}
+  .hire-me {
+    position: absolute;
+    right: 50px;
+    top: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    background: plum;
+    color: yellow;
+  }
 
-.article-heading {
-  position: relative;
-  left: -10px;
+  @media screen and (min-width: 992px) {
+    .hire-me {
+      position: fixed;
+    }
+  }
+
+  @media print {
+    .hire-me {
+      display: none;
+    }
+
+    .navigation {
+      display: none;
+    }
+  }
+
+  .article-heading {
+    position: relative;
+    left: -10px;
+  }
+}
+.outro-cv {
+  border-top-left-radius: 0.2rem;
+  border-top-right-radius: 1rem;
+  background-color: blueviolet;
+  background-image: linear-gradient(90deg, black, white);
 }
